@@ -20,7 +20,6 @@ Module::Build->new(
 		"IO::File" => "1.03",
 		"IO::Handle" => "1.08",
 		"constant" => 0,
-		"fields" => 0,
 		"integer" => 0,
 		"perl" => "5.006",
 		"strict" => 0,
