@@ -46,8 +46,6 @@ use IO::Handle 1.08;
 
 our $VERSION = "0.002";
 
-use fields qw(name has_dst trn_times obs_types offsets);
-
 # _fdiv(A, B), _fmod(A, B): divide A by B, flooring remainder
 #
 # B must be a positive Perl integer.  A must be a Perl integer.
@@ -152,7 +150,7 @@ sub _read_tm64($) {
 sub new {
 	my $class = shift;
 	unshift @_, "filename" if @_ == 1;
-	my DateTime::TimeZone::Tzfile $self = fields::new($class);
+	my $self = bless({}, $class);
 	my($filename, $fh);
 	while(@_) {
 		my $attr = shift;
@@ -328,10 +326,7 @@ attribute.
 
 =cut
 
-sub name {
-	my DateTime::TimeZone::Tzfile $self = shift;
-	return $self->{name};
-}
+sub name { $_[0]->{name} }
 
 =back
 
@@ -347,18 +342,14 @@ affect any of the zone's behaviour.
 
 =cut
 
-sub has_dst_changes {
-	my DateTime::TimeZone::Tzfile $self = shift;
-	return $self->{has_dst};
-}
+sub has_dst_changes { $_[0]->{has_dst} }
 
 #
 # observance lookup
 #
 
 sub _type_for_rdn_sod {
-	my DateTime::TimeZone::Tzfile $self = shift;
-	my($utc_rdn, $utc_sod) = @_;
+	my($self, $utc_rdn, $utc_sod) = @_;
 	my $lo = 0;
 	my $hi = @{$self->{trn_times}};
 	while($lo != $hi) {
@@ -376,8 +367,7 @@ sub _type_for_rdn_sod {
 }
 
 sub _type_for_datetime {
-	my DateTime::TimeZone::Tzfile $self = shift;
-	my($dt) = @_;
+	my($self, $dt) = @_;
 	my($utc_rdn, $utc_sod) = $dt->utc_rd_values;
 	$utc_sod = 86399 if $utc_sod >= 86400;
 	return $self->_type_for_rdn_sod($utc_rdn, $utc_sod);
@@ -392,8 +382,7 @@ is in effect at the instant represented by I<DT>, in seconds.
 =cut
 
 sub offset_for_datetime {
-	my DateTime::TimeZone::Tzfile $self = shift;
-	my($dt) = @_;
+	my($self, $dt) = @_;
 	my $type = $self->_type_for_datetime($dt);
 	return ref($type) eq "ARRAY" ? $type->[0] :
 		$type->offset_for_datetime($dt);
@@ -410,8 +399,7 @@ affect anything else.
 =cut
 
 sub is_dst_for_datetime {
-	my DateTime::TimeZone::Tzfile $self = shift;
-	my($dt) = @_;
+	my($self, $dt) = @_;
 	my $type = $self->_type_for_datetime($dt);
 	return ref($type) eq "ARRAY" ? $type->[1] :
 		$type->is_dst_for_datetime($dt);
@@ -428,8 +416,7 @@ either the timezone or the offset.
 =cut
 
 sub short_name_for_datetime {
-	my DateTime::TimeZone::Tzfile $self = shift;
-	my($dt) = @_;
+	my($self, $dt) = @_;
 	my $type = $self->_type_for_datetime($dt);
 	return ref($type) eq "ARRAY" ? $type->[2] :
 		$type->short_name_for_datetime($dt);
@@ -467,8 +454,7 @@ sub _local_to_utc_rdn_sod($$$) {
 }
 
 sub offset_for_local_datetime {
-	my DateTime::TimeZone::Tzfile $self = shift;
-	my($dt) = @_;
+	my($self, $dt) = @_;
 	my($lcl_rdn, $lcl_sod) = $dt->local_rd_values;
 	$lcl_sod = 86399 if $lcl_sod >= 86400;
 	foreach my $offset (@{$self->{offsets}}) {
